- Wordlist encoding: Added parameters --encoding-from and --encoding-to to configure wordlist encoding handling
- Rules: Support added for rule 'eX'
- Rules: Support added for position 'p' in host mode (using -j or -k)
- 7-Zip cracking: increased max. data length to 320k and removed AES padding attack to avoid false negatives
- Rules: Support added for rejection rule '_N' in host mode

##
## Workarounds
##

- Workaround added for NVidia NVML library: If libnvidia-ml.so couldn't be load try again using libnvidia-ml.so.1

##
## Improvements
##

- WPA cracking: Improved nonce-error-corrections mode to fix corrupt nonce generated on Big-Endian devices

##
## Bugs
##

- Fixed a missing type specifier in a function declaration of the RACF kernel
- Fixed a condition that caused a hybrid attack using a maskfile to not select all wordlists from a wordlist folder
- Fixed a memory leak that is present when a user is periodically printing hashcat status (using --status-timer)

##
## Technical
##

- Building: On binary release package, link libiconv static for windows binaries
- Dictstat: Structure for dictstat file changed as it has to include --encoding-from and --encoding-to parameter now
- OpenCL Runtime: Updated AMDGPU-Pro driver version check, do warn if version 17.10 is detected which is known to be broken
- WPA cracking: Reduced --nonce-error-corrections default from 16 to 8 to compensate speed drop caused due to Big-Endian fixes

* changes v3.40 -> 3.5.0:

##
## Features
##

- WPA cracking: Added support for WPA/WPA2 handshake AP nonce automatic error correction
- WPA cracking: Added parameter --nonce-error-corrections to configure range of error correction

##
## Algorithms
##

- Added hash-mode 15100 = Juniper/NetBSD sha1crypt

##
## Improvements
##

- Abbreviate long hashes to display the Hash.Target status line within 80 characters
- Refactored internal use of esalt to sync with the number of digests instead of the number of salts